# xiaomi_be7000

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYER.md  pyproject.toml  readme.md  startup.sh
adguard/: dhcp.bak  dns_servers.txt  readme.md  startup.sh
adguard/etc/init.d/: adguardhome
adguard/etc/nginx/conf.d/: adguardhome.conf
core/: readme.md  startup.sh
core/etc/init.d/: core
core/etc/nginx/conf.d/: router.conf
core/etc/profile.d/: custom.sh
filebrowser/: readme.md
inventory/: config.yml  dns_records.yml  hosts.yml.example
src/router_deployer/: __init__.py  cli.py  config.py  connection.py
src/router_deployer/services/: __init__.py  adguard.py  base.py  core.py  v2raya.py
src/router_deployer/uci/: __init__.py  base.py  dhcp.py  firewall.py  network.py  wireless.py
v2raya/: readme.md  routingA.txt  startup.sh
v2raya/etc/config/: v2ray  v2raya
v2raya/etc/init.d/: v2ray  v2raya
v2raya/etc/nginx/conf.d/: v2raya.conf
v2raya/etc/v2ray/: config.json
v2raya/etc/xray/: config.json
v2raya/scripts/: update_geo_files.sh
